--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
                     <a class="navbar-item" href="index.html">Skills</a>
                 </div>
                 <div class="navbar-item-container">
-                    <a class="navbar-item" href="index.html">Education</a>
+                    <a class="navbar-item" href="education.html">Education</a>
                 </div>
                 <div class="navbar-item-container">
                     <a class="navbar-item" href="aboutme.html">About</a></li>
