Implement skills and achievements page

--- a/education.html
+++ b/education.html
@@ -15,13 +15,13 @@
                 </div>
                 
                 <div class="navbar-item-container">
-                    <a class="navbar-item" href="index.html">Achievements</a>
+                    <a class="navbar-item" href="achievements.html">Achievements</a>
                 </div>
                 <div class="navbar-item-container">
                     <a class="navbar-item" href="index.html">Projects</a>
                 </div>
                 <div class="navbar-item-container">
-                    <a class="navbar-item" href="index.html">Skills</a>
+                    <a class="navbar-item" href="skills.html">Skills</a>
                 </div>
                 <div class="navbar-item-container">
                     <a class="navbar-item" href="education.html">Education</a>
