--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                             <a class="navbar-item home-link-color" href="education.html">Education</a>
                         </div>
                         <div class="navbar-item-container">
-                            <a class="navbar-item home-link-color" href="index.html">Skills</a>
+                            <a class="navbar-item home-link-color" href="skills.html">Skills</a>
                         </div>
                         <div class="navbar-item-container">
                             <a class="navbar-item home-link-color" href="index.html">Projects</a>
                         </div>
                         <div class="navbar-item-container">
-                            <a class="navbar-item home-link-color" href="index.html">Achievements</a>
+                            <a class="navbar-item home-link-color" href="achievements.html">Achievements</a>
                         </div>
                     </div>
                 </div>
