Implement projects and contact page

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,14 +11,14 @@
             <div class="navbar">
 
                 <div class="navbar-item-container">
-                    <a class="navbar-item" href="index.html">Contact</a>
+                    <a class="navbar-item" href="contactme.html">Contact</a>
                 </div>
                 
                 <div class="navbar-item-container">
                     <a class="navbar-item" href="achievements.html">Achievements</a>
                 </div>
                 <div class="navbar-item-container">
-                    <a class="navbar-item" href="index.html">Projects</a>
+                    <a class="navbar-item" href="projects.html">Projects</a>
                 </div>
                 <div class="navbar-item-container">
                     <a class="navbar-item" href="skills.html">Skills</a>
