--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="navbar-item home-link-color" href="skills.html">Skills</a>
                         </div>
                         <div class="navbar-item-container">
-                            <a class="navbar-item home-link-color" href="index.html">Projects</a>
+                            <a class="navbar-item home-link-color" href="projects.html">Projects</a>
                         </div>
                         <div class="navbar-item-container">
                             <a class="navbar-item home-link-color" href="achievements.html">Achievements</a>
