Modify cards for improved look, add publications to achievements page

--- a/skills.html
+++ b/skills.html
@@ -237,7 +237,7 @@
             <div class="skill-item" style="padding: 10pt;">
                 <div >
                     <a>
-                        <img class="skill-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Scikit_learn_logo_small.svg/2560px-Scikit_learn_logo_small.svg.png">
+                        <img class="skill-image" style="width: 150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Scikit_learn_logo_small.svg/2560px-Scikit_learn_logo_small.svg.png">
                     </a>
                 </div>
 
@@ -292,7 +292,7 @@
             <div class="skill-item" style="padding: 10pt;">
                 <div >
                     <a>
-                        <img class="skill-image" src="https://static-00.iconduck.com/assets.00/flask-icon-1594x2048-84mjydzf.png">
+                        <img class="skill-image" src="https://www.svgrepo.com/show/473611/flask.svg">
                     </a>
                 </div>
 
