--- a/skills.html
+++ b/skills.html
@@ -153,7 +153,7 @@
                         <h3 style="line-height: 0;">CSS</h3>
                     </div>
                     <div class="skill-col" style="margin: 0;"style="margin: 0;">
-                        <a class="edu-group">Level:</a> <a style="color: purple; font-size: large; font-weight: bolder;">Intermediate</a>
+                        <a class="edu-group">Level:</a> <a style="color: green; font-size: large; font-weight: bolder;">Beginner</a>
                     </div>
                 </div>
             </div>
